after changing the H1 to H2
after changing the H1 to H2

--- a/CS472-WAP-2020/aboutMeCSS.css
+++ b/CS472-WAP-2020/aboutMeCSS.css
@@ -1,10 +1,13 @@
 body{
     background-color: #595647;
-    color: #e5e2db;
-    
+    color: #e5e2db;    
 }
 
 h1{
+    color: #5dbcd2;
+}
+
+h2{
     color: #5dbcd2;
 }
 
